# icebergPy

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
examples/: debug_log_new.txt  helheim_example_update.py
figure_pys/: figure_4.py  figure_5.py  figure_6.py
iceberg_geoms/: iceberg_dimensions_add_depth.py
notebooks/: helheim_example_test.py  helheim_example_test_ctd_csv.py  helheim_example_test_ctd_np_arr.py  helheim_example_test_ctd_np_arr_field_CTD.py  print_QIB_values.ipynb  stac_sam_example.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_AVG.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_AVG_diff_bergs.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_MAX_diff_bergs.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_MIN_diff_bergs.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_max.ipynb  test_Qib_scenarios_save_table_vol_fix_350_dt50_justaw_sermilik_ctd_min.ipynb
notebooks/.virtual_documents/: stac_sam_example.ipynb
src/files/: MIGRATION_GUIDE.py  constants.py  (+1 more)
tests/: all_sizes_comparison.py  check_mturbw_values.py  check_nans_zeros.py  compare_Qib.py  compare_melt_functions.py  debug_keel_layer_t1.py  detailed_geometry_comparison.py  diagnostic.py  geometry_usage_diagnostic.py  isolate_input_difference.py  keel_divergance.py  keel_layer_diagnostic.py  keel_manual_test.py  layer_by_layer_diagnostic.py  melt_functions.py  melt_functions_vs_Iceberg_class.py  test_installation.py  timestep_comparison.py
(+46 files in other folders)
