[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg-model"
version = "0.1.0"
description = "Iceberg geometry and melt model from Moon et al. (2018)"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "xarray>=0.16.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
